<resources>
    <string name="app_name">アンドロイド磨き道</string>
    <string name="title_activity_detail">detailActivity</string>
    <string name="title_activity_sub_list_view">subListViewActivity</string>
    <string name="title_activity_list_view">listViewActivity</string>

    <string name="title">setting Title</string>
    <string name="checkbox_title">setting Title</string>
    <string name="checkbox_summary">setting Title</string>
    <string name="edittext_title">setting Title</string>
    <string name="edittext_summary">setting Title</string>
    <string name="list_title">setting Title</string>
    <string name="list_summary">setting Title</string>
    <string name="ringtone_title">setting Title</string>
    <string name="ringtone_summary">setting Title</string>
    <string name="title_activity_maps">Map</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="title_activity_sq_lite_activity">sqLiteActivityActivity</string>
    <string name="title_activity_fragment_listener">FragmentListenerActivity</string>

    <string name="twitter_consumer_key">vxlE2KTWuujO4GPDHVTRfj1bu</string>
    <string name="twitter_consumer_secret">iYh8rQc3zdiQnvpOr4ENiBnD14Nr4nTLdtuKpBypFDglv5BwuA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="doze_maintenance_intro">  Android 6.0（API レベル 23）で Doze が導入されました。これは、ユーザーが端末を電源と接続せずに静止状態にし、画面をオフにすると、CPU とネットワークのアクティビティを保留して電池の寿命を改善するものです。Android 7.0 では、Doze が改良されています。端末を電源と接続せずに画面をオフにすると、端末が静止していなくても（たとえば、ユーザーがハンドセットをポケットに入れて持ち歩いている場合）、CPU およびネットワーク制限のサブセットがアプリに適用されます。</string>
    <string name="doze_intro">端末が電池で動作しているときに画面をしばらくオフにすると、端末は Doze モードになり、第一段階の制限サブセットが適用されます。これにより、アプリのネットワーク アクセスが切断されてジョブと同期が保留されます。端末が Doze モードに入った後、しばらくの間静止状態が続くと、残りの Doze 制限が PowerManager.WakeLock、AlarmManager アラーム、GPS、Wi-Fi スキャンに適用されます。適用される Doze 制限が一部であるか完全なものであるかには関係なく、端末は Doze モードから短時間抜け出し、メンテナンスの時間枠と呼ばれる状態になります。このとき、アプリはネットワーク アクセスを許可され、保留されたジョブや同期を実行することができます。</string>
    <string name="doze_finish_intro">画面をオンにするか、端末を電源に接続すると、Doze モードは解除され、これらの処理の制限は適用されなくなります。Doze とアプリ スタンバイ用に最適化するで説明したように、今回追加された動作は、Android 6.0（API レベル 23）で導入された以前のバージョンの Doze にアプリを対応させるための推奨事項とベスト プラクティスに影響するものではありません。メッセージの送受信に Google Cloud Messaging（GCM）を使用するなどの推奨事項を引き続き順守して、追加の Doze 動作に対応するためにアップデートを計画してください。</string>


    <string name="text_for_test_style1">
        全国高校生英語ディベート大会では，多くの地域から，異なったディベート経験をしてきた高校生が集い，共通の土俵で競い合います。この大会ルールの目的は，最低限の共通の土台を設けることで，できるだけ公平で，教育的にも意味があり，何よりも楽しいディベート大会を実現することにあります。
    </string>

    <string name="text_for_test_style2">
        大会運営上の規定なども含みますので，すべてを読み通す必要はありませんが，重要性の高い項目には四角の枠で囲みましたので，出場者の高校生の皆さんと，ジャッジ・顧問の先生は関連しそうな箇所を，試合前に一度目を通してください。＊ルール本文の右側のアステリスク付きの小さな字の部分は，各項目の解説ですので必要に応じ目を通してください。できるだけ
    </string>

    <string name="text_for_test_style3">
        この大会ルールはあくまでディベートを行う上での最低限の取り決めにすぎません。ルールに定めがないからと言って，それ以外は何をやっても良いという訳ではありません。高校生にふさわしくない行為はもちろん行うべきではありませんし，本連盟のMake Friends憲章に則り，フェア・プレーの精神に違反してはならないということを忘れないでください。
    </string>
</resources>
