<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    　　<PreferenceCategory android:title="@string/title">
　　　　<!-- チェックボックスによる設定 -->
　　　　<CheckBoxPreference android:key="checkbox_key" android:title="@string/checkbox_title" android:summary="@string/checkbox_summary" />
　　　　<!-- エディットテキストによる設定 -->
　　　　<EditTextPreference android:key="edittext_key" android:title="@string/edittext_title" android:summary="@string/edittext_summary" />
　　　　<!-- リストによる設定 -->
　　　　<ListPreference android:key="list_key" android:title="@string/list_title" android:summary="@string/list_summary" android:entries="@array/list_entries" android:entryValues="@array/list_entryvalues" />
　　　　<!-- 着信音の設定 -->
　　　　<RingtonePreference android:key="ringtone_key" android:title="@string/ringtone_title" android:summary="@string/ringtone_summary" android:showDefault="true" />
　　</PreferenceCategory>
</PreferenceScreen>